Made a card using html with css

--- a/Myportfolio.html
+++ b/Myportfolio.html
@@ -11,10 +11,10 @@
     <header class="header">
         <nav class="nav-bar">
             <a href="#" class="brand">Web Developer</a>
-            <ul class="nav-list-item">
-                <li class="nav-list"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-list"><a href="#" class="nav-link">Skills</a></li>
-                <li class="nav-list"><a href="#" class="nav-link">Contact</a></li>
+            <ul class="nav-list">
+                <li class="nav-list-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-link">Skills</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -22,15 +22,18 @@
     <section class="card-container">
         <div class="card">
             <div class="card-img">
-                <img src="#" alt="Nature"/>
+                <img src="https://img.freepik.com/free-photo/copy-space-roses-flowers_23-2148860032.jpg?w=2000" alt="Nature"/>
             </div>
+        </div>
 
+        <div class="card">
             <div classl="card-header">
                 <h2>This is about MySelf</h2>
             </div>
+            
 
             <div class="card-body">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum exercitationem ipsa deserunt vel aliquam natus tempore voluptatum sed iste eligendi!
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum exercitationem ipsa deserunt vel aliquam natus tempore voluptatum sed iste eligendi!lorem50 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet vitae distinctio, nihil rerum optio soluta accusantium inventore natus numquam architecto repellat nemo odio officia, ab vero tempore. Saepe, obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit labore corrupti officia dolorem, quidem deleniti sequi fugiat eligendi. Corrupti accusantium totam quo magni eius nulla. Consequatur ipsam beatae molestiae cupiditate iure consequuntur laborum deleniti id. Totam aut facilis porro iste vel incidunt? Rerum vel est nihil amet nam Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias, dolores eum odit, error harum perferendis incidunt aspe
                 </p>
             </div>
 
